05-namespaces/02-kubectl-with-namespace/diff-2-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-dev-namespace
  labels:
    name: my-dev-namespace
---
apiVersion: v1
kind: Namespace
metadata:
  name: my-uat-namespace
  labels:
    name: my-uat-namespace
